[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/HUD/HealthBar/HealthBarOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/HUD/HealthBar/HealthBarUnder.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/HUD/Dash/DashBar.gd" type="Script" id=6]

[node name="DashBar" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 6 )

[node name="BarUnder" parent="." instance=ExtResource( 5 )]
margin_right = 200.0
margin_bottom = 14.0

[node name="BarOver" parent="." instance=ExtResource( 4 )]
margin_right = 200.0
margin_bottom = 14.0
